Fix Responsive on Mobile devices

--- a/css/main.scss
+++ b/css/main.scss
@@ -112,7 +112,6 @@ html.lenis {
 	.lang-tog {
 		cursor: pointer;
 		transition: $duration;
-		border: 1px solid red;
 
 		&:hover {
 			background-color: $main;
